# zoo-cpp

./: .gitignore  CMakeLists.txt  README.md
assets/objects/: building.json  tree.json
assets/paths/: cobble_path.json  dirt_path.json
assets/walls/: ironBarFence.json  iron_bar_fence.json  wooden_fence.json
cmake/: FindSDL2.cmake
shaders/: ArrayTextureFragment.shader  ArrayTextureVertex.shader  BasicFragment.shader  BiomeVertex.shader  ColourFragment.shader  ColourTextureFragment.shader  ColourTextureVertex.shader  ColourVertex.shader  PickFragment.shader  PickVertex.shader  TextureFragment.shader  TextureVertex.shader  WaterFragment.shader  WaterVertex.shader
src/: AssetManager.cpp  AssetManager.h  BiomeGrid.cpp  BiomeGrid.h  Debug.cpp  Debug.h  ElevationGrid.cpp  ElevationGrid.h  Entity.cpp  Entity.h  Entity.tpp  Game.cpp  Game.h  ISerialisable.h  InputManager.cpp  InputManager.h  Mediator.cpp  Mediator.h  Messenger.cpp  Messenger.h  Profiler.cpp  Profiler.h  Registry.cpp  Registry.h  Renderer.cpp  Renderer.h  Root.cpp  Root.h  SaveManager.cpp  SaveManager.h  Scene.h  SceneManager.cpp  SceneManager.h  SpriteSheet.cpp  SpriteSheet.h  Stage.cpp  Stage.h  UIManager.cpp  UIManager.h  Zoo.cpp  (+7 more)
src/components/: Component.cpp  Component.h  RenderComponent.cpp  RenderComponent.h
src/constants/: assets.h  colours.h  depth.h  events.h  world.h
src/entities/: Entity.cpp  Entity.h  Entity.tpp  entityGenerators.h
src/entities/components/: AreaPathFollowComponent.cpp  AreaPathFollowComponent.h  Component.cpp  Component.h  ElevationComponent.cpp  ElevationComponent.h  InputComponent.cpp  InputComponent.h  MoveComponent.cpp  MoveComponent.h  PathFollowComponent.cpp  PathFollowComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  RenderComponent.cpp  RenderComponent.h  SolidComponent.cpp  SolidComponent.h  TileObjectComponent.cpp  TileObjectComponent.h  createComponentById.cpp  createComponentById.h  template.md
src/gfx/: ArrayTexture.cpp  ArrayTexture.h  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.h  Sprite.h  SpriteSheet.cpp  SpriteSheet.h  Texture.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/include/imgui/: imgui_impl_opengl3.cpp
src/lib/imgui/: imgui_impl_opengl3.cpp
src/renderer/: ArrayTexture.cpp  ArrayTexture.h  Image.cpp  Image.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Sprite.cpp  SubTexture.cpp  SubTexture.h  Texture.cpp  Texture.h  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/tools/: BiomeTool.cpp  BiomeTool.h  DeleteTool.cpp  DeleteTool.h  DoorTool.cpp  DoorTool.h  ElevationTool.cpp  ElevationTool.h  NoTool.cpp  NoTool.h  PathTool.cpp  PathTool.h  TileObjectTool.cpp  TileObjectTool.h  Tool.cpp  Tool.h  ToolGhost.cpp  ToolGhost.h  ToolManager.cpp  ToolManager.h  WallTool.cpp  WallTool.h  template.md
src/ui/: BiomePanel.cpp  BiomePanel.h  DebugInfo.cpp  DebugInfo.h  ElevationPanel.cpp  ElevationPanel.h  GUI.cpp  GUI.h  ObjectPanel.cpp  ObjectPanel.h  PathPanel.cpp  PathPanel.h  Toolbar.cpp  Toolbar.h  UIComponent.cpp  UIComponent.h  UIManager.cpp  UIManager.h  WallPanel.cpp  WallPanel.h  Window.cpp  Window.h
src/ui/dialogs/: DebugPanel.cpp  DebugPanel.h  ProfilerPanel.cpp  ProfilerPanel.h  Toolbar.cpp  Toolbar.h
src/util/: cell.h  color.h  colour.h  draw.h  jmath.h  json.h  math.h  raymath_operators.h  rect.h  time.h  typeMap.h  util.h  uuid.h
src/world/: Area.cpp  Area.h  AreaManager.cpp  AreaManager.h  BiomeGrid.cpp  BiomeGrid.h  ElevationGrid.cpp  ElevationGrid.h  PathGrid.cpp  PathGrid.h  Pathfinder.cpp  Pathfinder.h  WallGrid.cpp  WallGrid.h  World.cpp  World.h
